[package]
name = "hls-streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes", "async-process", "unstable"] }
futures = "0"
serde = { version="1", features = ["derive"] }
tide = "0"
anyhow = "1"